package Enums;

public enum TipoReacao {
    LIKE,
    DiSLIKE,
}
