package Alerta_Cidadao.enums;

public enum TipoAlerta {
    TIROTEIO,
    ARRASTAO,
    OPERACAO_POLICIAL,
    ASSALTO,
    FURTO,
    OUTRO
}
